--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "bootstrap-css": "~3.0.0",
     "jquery": "~2.1.0",
     "lodash": "~2.4.1",
-    "ng-tags-input": "2.1.1"
+    "ng-tags-input": "2.1.1",
+    "angular-timer": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.13",
