--- a/app/static/lib/angular-resource/bower.json
+++ b/app/static/lib/angular-resource/bower.json
@@ -1,8 +1,9 @@
 {
-    "name": "angular-resource",
-    "version": "1.2.26",
-    "main": "./angular-resource.js",
-    "dependencies": {
-        "angular": "1.2.26"
-    }
+  "name": "angular-resource",
+  "version": "1.3.8",
+  "main": "./angular-resource.js",
+  "ignore": [],
+  "dependencies": {
+    "angular": "1.3.8"
+  }
 }
