--- a/app/static/lib/angular-route/bower.json
+++ b/app/static/lib/angular-route/bower.json
@@ -1,8 +1,9 @@
 {
-    "name": "angular-route",
-    "version": "1.2.26",
-    "main": "./angular-route.js",
-    "dependencies": {
-        "angular": "1.2.26"
-    }
+  "name": "angular-route",
+  "version": "1.3.8",
+  "main": "./angular-route.js",
+  "ignore": [],
+  "dependencies": {
+    "angular": "1.3.8"
+  }
 }
