--- a/app/static/lib/angular/bower.json
+++ b/app/static/lib/angular/bower.json
@@ -1,7 +1,8 @@
 {
-    "name": "angular",
-    "version": "1.2.26",
-    "main": "./angular.js",
-    "dependencies": {
-    }
+  "name": "angular",
+  "version": "1.3.8",
+  "main": "./angular.js",
+  "ignore": [],
+  "dependencies": {
+  }
 }
