--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 Flask==0.10.1
+Flask-Login==0.2.11
+Flask-OpenID==1.2.4
 Flask-Restless==0.15.0
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.10.3
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==0.9.7
+WTForms==2.0.1
 Werkzeug==0.9.6
 argparse==1.2.1
 gunicorn==19.1.1
@@ -11,5 +15,6 @@ itsdangerous==0.24
 mimerender==0.5.4
 python-dateutil==2.3
 python-mimeparse==0.1.4
+python-openid==2.2.5
 six==1.8.0
 wsgiref==0.1.2
