--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
 Flask==0.10.1
 Flask-Login==0.2.11
+Flask-Migrate==1.3.0
 Flask-OpenID==1.2.4
 Flask-Restless==0.15.0
 Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
 Flask-WTF==0.10.3
 Jinja2==2.7.3
+Mako==1.0.0
 MarkupSafe==0.23
 SQLAlchemy==0.9.7
 WTForms==2.0.1
 Werkzeug==0.9.6
+alembic==0.7.3
 argparse==1.2.1
 gunicorn==19.1.1
+httplib2==0.9
 itsdangerous==0.24
 mimerender==0.5.4
+oauth2==1.5.211
+psycopg2==2.5.4
 python-dateutil==2.3
 python-mimeparse==0.1.4
 python-openid==2.2.5
+requests==0.14.2
 six==1.8.0
 wsgiref==0.1.2
