--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "lodash": "~2.4.1",
     "ng-tags-input": "2.1.1",
     "angular-timer": "~1.2.0",
-    "angular-markdown-directive": "~0.3.1"
+    "angular-markdown-directive": "~0.3.1",
+    "satellizer": "~0.8.8",
+    "angular-ui-router": "~0.2.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.8",
