--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==0.10.1
 Flask-Login==0.2.11
 Flask-Migrate==1.3.0
+Flask-OAuth==0.12
 Flask-OpenID==1.2.4
 Flask-Restless==0.15.0
 Flask-SQLAlchemy==2.0
@@ -9,6 +10,7 @@ Flask-WTF==0.10.3
 Jinja2==2.7.3
 Mako==1.0.0
 MarkupSafe==0.23
+PyJWT==0.2.1
 SQLAlchemy==0.9.7
 WTForms==2.0.1
 Werkzeug==0.9.6
@@ -19,10 +21,13 @@ httplib2==0.9
 itsdangerous==0.24
 mimerender==0.5.4
 oauth2==1.5.211
+oauthlib==0.7.2
 psycopg2==2.5.4
+pycrypto==2.6.1
 python-dateutil==2.3
 python-mimeparse==0.1.4
 python-openid==2.2.5
-requests==0.14.2
+requests==2.3.0
+requests-oauthlib==0.4.1
 six==1.8.0
 wsgiref==0.1.2
