--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "todolist",
   "version": "0.0.0",
   "dependencies": {
-    "angular-bootstrap": "~0.10.0",
+    "angular-bootstrap": "~0.12.0",
     "angular-resource": "~1.3.8",
     "angular-sanitize": "~1.3.8",
     "angular-animate": "~1.3.8",
     "angular-route": "~1.3.8",
     "angular-ui-date": "~0.0.3",
     "angular": "~1.3.8",
-    "bootstrap-css": "~3.0.0",
     "jquery": "~2.1.0",
     "lodash": "~2.4.1",
     "ng-tags-input": "2.1.1",
     "angular-timer": "~1.2.0",
     "angular-markdown-directive": "~0.3.1",
     "satellizer": "~0.8.8",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "bootstrap": "~3.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.8",
